--- a/index.html
+++ b/index.html
@@ -3,192 +3,206 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./static/styles.css">
+    <title>Camillo RT</title>
+   
+   
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Google Font - Poppins font input -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">   
-<title>Camillo RT</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">  
+
+    <!-- Boxicon connection -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
 
+<header class="header">
+    <a href="#" class="logo">Camillo RT</a>
 
-    	<!-- NAVBAR -->
-<header class="navbar">
-		<div class="nav-left"><img src="static/images/Logo-Camillo-RT.png" alt="Camillo RT Logo"></div>
-		<div class="nav-right">
-			<a href="Home">Home</a>
-			<a href="Projects">Projects</a>
-			<a href="About">About</a>
-			<a href="Solutions">Solutions</a>
-			<a href="Pricing">Pricing</a>
-			<button class="button">Contact</button>
-		</div>
+    <i class='bx bx-menu' id="menu-icon"></i>
+
+    <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+    </nav>
 </header>
 
-	<!-- Hero -->
-	<main class="container">
-		<div class="hero">
-				<div class="col-left">
-					<h1>Immersive XR Development & 3D Gamification</h1>
-					<p>Transform ideas into interactive experiences with cutting-edge XR, stunning 3D content, <br>and gamification that captivates your audience.</p>
-					<div class="button-container">
-						<button class="button">
-							Start now
-						</button>
-					</div>
-				</div>
-				<div class="col-right">
-					<img class="Aquarium" src="static/images/3d model.png" alt="3d model">
-				</div>
-			</div>
-	</main>
-
-
-
-
-	<!-- Customers -->
-<div class="Customers">
-	<h2>Our Customers</h2>
-    <div class="scroller">
-		<marquee behavior="" direction="">
-		<ul class="tag-list scroller_inner">
-					<li><a href="#"><img src="static/images/MUW logo.png"></a></li>
-					<li><a href="#"><img src="static/images/oenb logo.png"></a></li>
-					<li><a href="#"><img src="static/images/evil eye.png"></a></li>
-					<li><a href="#"><img src="static/images/simventure.png"></a></li>
-				</ul></marquee>
-	</div>
+<section class="home" id="home">
+<div class="home-content">
+    <h3>Hello, We are</h3>
+    <h1>Camillo RT</h1>
+    <h3>And we do <span class="multiple-text"></span></h3>
+    <p>Transform ideas into interactive experiences with cutting-edge XR, stunning 3D content,
+        and gamification that captivates your audience.</p>
+        <div class="social-media">
+            <a href="#"><i class='bx bxl-facebook' ></i></a>
+            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+        </div>
+        <a href="#" class="btn">Welcome !</a>
 </div>
 
+<div class="home-img">
+    <img src="images/3d model.png" alt="3D Model example">
+</div>
+</section>
 
 
-
-	<!-- Solutions -->
-	 <div class="Solutions">
-		<h2> Solutions</h2>
-		<div class="solutins-container">
-			<div class="sol">
-				<h3>Immersive XR Solutions</h3>
-				<p>We specialize in crafting XR environments that blend reality with innovation. 
-					From augmented reality overlays to fully immersive virtual experiences, 
-					we bring your vision to life with technology that engages and inspires.</p>
-				<button class="button">Click Me</button>
-			</div>
-			<div class="sol">
-				<h3>Stunning 3D Content Creations</h3>
-				<p>Our team designs breathtaking 3D visuals tailored to your needs. 
-					Whether it's for gaming, marketing, or product visualization, 
-					we deliver high-quality assets that resonate with your audience.</p>
-				<button class="button">Click Me</button>
-			</div>
-			<div class="sol">
-				<h3>Gamification for Engagement</h3>
-				<p>Boost interaction and engagement through smart gamification. 
-					We integrate playful, rewarding experiences into your projects, 
-					turning users into active participants and ensuring memorable connections.</p>
-				<button class="button">Click Me</button>
-			</div>
-		</div>
-	</div>
+<!-- About ME -->
+<section class="about" id="about">
+    <div class="about-img">
+        <img src="images/Oliver.png" alt="Oliver Schmidt">
+    </div>
+<div class="about-content">
+    <h2 class="heading">About<span>Me</span></h2>
+    <h3>3DX Designer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Minus odit debitis officia autem eligendi iusto. 
+        Sequi aliquam vel molestias consectetur praesentium 
+        quisquam quasi suscipit atque impedit rerum? Veniam, et eum.</p>
+        <a href="#" class="btn">Read More</a>
+</div>
+</section>
 
 
+<!-- SERVICES -->
 
-<!-- Projects -->
-<div class="projects">
-	<h2>Projects</h2>
-	<div class="example">
-		<div class="card">
-			<div class="upper">
-				<h3>Evil Eye</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsum ducimus, 
-				saepe et quisquam cumque sunt harum vel. Debitis est dicta repellendus minus doloribus id totam, 
-				magnam obcaecati incidunt nostrum.</p>
-				<button class="card-button">Click Me</button>
-			</div>
-		</div>
-		<div class="card">
-			<div class="upper">
-				<h3>VR Wingsuit Simulation</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsum ducimus, 
-				saepe et quisquam cumque sunt harum vel. Debitis est dicta repellendus minus doloribus id totam, 
-				magnam obcaecati incidunt nostrum.</p>
-				<button class="card-button">Click Me</button>
-			</div>
-		</div>
-		<div class="card">
-			<div class="upper">
-				<h3>Gamification</h3>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus ipsum ducimus, 
-				saepe et quisquam cumque sunt harum vel. Debitis est dicta repellendus minus doloribus id totam, 
-				magnam obcaecati incidunt nostrum.</p>
-				<button class="card-button">Click Me</button>
-			</div>
-		</div>
-	</div>
+<section class="services" id="services">
+    <h2 class="heading">Our <span> Services</span></h2>
+
+<div class="services-container">
+        <div class="services-box">
+        <i class='bx bxs-paint' ></i>
+        <h3> Graphic Design</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Quaerat accusantium dolores expedita quibusdam laudantium. Expedita molestias non impedit error aliquam.</p>
+        <a href="#" class="btn">Read More</a>
+    </div>
+
+    <div class="services-box">
+        <i class='bx bx-code-alt' ></i>
+        <h3> 3DX Development</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Quaerat accusantium dolores expedita quibusdam laudantium. Expedita molestias non impedit error aliquam.</p>
+        <a href="#" class="btn">Read More</a>
+    </div>
+
+    <div class="services-box">
+        <i class='bx bxs-game' ></i>
+        <h3> Gamification</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Quaerat accusantium dolores expedita quibusdam laudantium. Expedita molestias non impedit error aliquam.</p>
+        <a href="#" class="btn">Read More</a>
+    </div>
+
+</div>
+</section>
+
+<section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span>Project</span></h2>
+
+    <div class="portfolio-container">
+        <div class="portfolio-box">
+            <img src="images/portfolio1.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="images/portfolio2.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="images/portfolio3.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="images/portfolio4.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="images/portfolio5.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="images/portfolio6.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Accusantium ea qui nisi eum dolore exercitationem possimus fuga, 
+                    iusto pariatur dolorum.</p>
+                <a href="#"><i class='bx bx-link-external' ></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h2 class="heading">Contact<span>Me!</span></h2>
+    <form action="#">
+        <div class="input-box">
+            <input type="text" placeholder="Full Name">
+            <input type="email" placeholder="Email Adress">
+        </div>
+        <div class="input-box">
+            <input type="number" placeholder="Mobile Number">
+            <input type="text" placeholder="Email Subject">
+        </div>
+        <textarea namee="" id="" cols="" rows="" placeholder="Your Message"></textarea>
+        <input type="submit" value="Send Message" class="btn">
+    </form>"
+</section>
+
+<footer class="footer">
+    <div class="footer-text">
+        <p>Copyright &copy; 2024 by Camillo RT | All rights Reserved.</p>
+    </div>
+
+<div class="footer-icontop">
+    <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
 </div>
 
+</footer>
+<!-- Scroll reveal -->
+<script src="https://unpkg.com/scrollreveal"></script>
 
-<!-- About Us -->
-<div class="About-us">
-	<h2> About Us</h2>
-		<div class="Oliver">
-			<img src="static/images/Oliver.png" alt="Oliver Schmidt">
-			<div class="text">
-				<h3>Oliver Schmidt, MSc (Founder)</h3>
-				<p>Main focus are Game Development Technologies and 3D creation tools to deliver captivating experiences.</p>
-				<p>Studied MultiMediaArt at FH Salzburg and Game Engineering and Simulations at FH Technikum Vienna.</p>
-			</div>
-		</div>
-		<div class="Simone">
-			<img src="static/images/Simone.jpeg" alt="Simone Mucas">
-			<div class="text">
-				<h3>Simone Muscas, MSc (XR Developer)</h3>
-				<p>Main focus are Game Development Technologies and 3D creation tools to deliver captivating experiences.</p>
-				<p>Studied MultiMediaArt at FH Salzburg and Game Engineering and Simulations at FH Technikum Vienna.</p>
-			</div>
-		</div>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script></script>
 
-   
-<!-- Contact Form -->
-<div class="contact-container">
-	<h1>contact us</h1>
-	<div class="row">
-			<h4 style="text-align:center">We'd love to hear from you!</h4>
-	</div>
-	<div class="row input-container">
-			<div class="col-xs-12">
-				<div class="styled-input wide">
-					<input type="text" required />
-					<label>Name</label> 
-				</div>
-			</div>
-			<div class="col-md-6 col-sm-12">
-				<div class="styled-input">
-					<input type="text" required />
-					<label>Email</label> 
-				</div>
-			</div>
-			<div class="col-md-6 col-sm-12">
-				<div class="styled-input" style="float:right;">
-					<input type="text" required />
-					<label>Phone Number</label> 
-				</div>
-			</div>
-			<div class="col-xs-12">
-				<div class="styled-input wide">
-					<textarea required></textarea>
-					<label>Message</label>
-				</div>
-			</div>
-			<div class="col-xs-12">
-				<div class="btn-lrg submit-btn">Send Message</div>
-			</div>
-	</div>
-</div>
-
-
-    
+<script src="js/script.js"></script>
 </body>
 </html>
